--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <p class="rules-text">Use your right and left keys to move the paddle to bounce the ball up and break the blocks.</p>
       <p class="rules-text">If you miss the ball, your score and blocks will reset.</p>
     </div>
-    <div class="score"></div>
+    <div class="score">Score: 0</div>
     <canvas class="canvas" width="800" height="600"></canvas>
 
 <script src="script.js"></script>
